# pytest-dpg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/pytest_dpg/: __init__.py  commands.py  dpg_helpers.py  invoker.py  plugin.py  receiver.py
tests/: conftest.py  test_plugin.py
